// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Chip /> should render a tag 1`] = `
<Chip
  editLabel={null}
  id="some-id"
  invert={false}
  onClick={[Function]}
  onRemove={[Function]}
  removable={true}
  removeLabel={null}
>
  <div
    className="css-s3ttd5"
    data-test-id="some-id"
  >
    <Button
      aria-label={null}
      className="css-39vnpz"
      disabled={false}
      onClick={[Function]}
      testId="removeFilter"
    >
      <button
        aria-label={null}
        className="css-39vnpz css-1rn65c0 common__button"
        data-test-id="removeFilter"
        disabled={false}
        onClick={[Function]}
      >
        <ResponsiveContainer
          appAlways={true}
          appOnly={false}
          breakpoint="<=xs"
          webAlways={false}
          webOnly={false}
        >
          <Cross
            color="var(--color-primary, #5ccee3)"
            size={16}
          >
            <Icon
              className=""
              color="var(--color-primary, #5ccee3)"
              content="<path d=\\"M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z\\"/>"
              size={16}
              viewBox="0 0 24 24"
            >
              <svg
                className="css-yys9hb "
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<path d=\\"M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z\\"/>",
                  }
                }
                style={
                  Object {
                    "fill": "var(--color-primary, #5ccee3)",
                    "fontSize": 16,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              />
            </Icon>
          </Cross>
        </ResponsiveContainer>
        <ResponsiveContainer
          appAlways={false}
          appOnly={false}
          breakpoint=">xs"
          webAlways={false}
          webOnly={true}
        />
      </button>
    </Button>
    <Button
      aria-label={null}
      className="css-hb5pev"
      disabled={false}
      onClick={[Function]}
      testId="Button"
    >
      <button
        aria-label={null}
        className="css-hb5pev css-1rn65c0 common__button"
        data-test-id="Button"
        disabled={false}
        onClick={[Function]}
      >
        text
      </button>
    </Button>
  </div>
</Chip>
`;

exports[`<Chip /> should render a without removable icon 1`] = `
<Chip
  editLabel={null}
  id="some-id"
  invert={false}
  onClick={[Function]}
  onRemove={[Function]}
  removable={false}
  removeLabel={null}
>
  <div
    className="css-cnp1vx"
    data-test-id="some-id"
  >
    <Button
      aria-label={null}
      className="css-hb5pev"
      disabled={false}
      onClick={[Function]}
      testId="Button"
    >
      <button
        aria-label={null}
        className="css-hb5pev css-1rn65c0 common__button"
        data-test-id="Button"
        disabled={false}
        onClick={[Function]}
      >
        text
      </button>
    </Button>
  </div>
</Chip>
`;
